# cassiopeia

./: .gitignore  Dockerfile  README.md  cassiopeia_lib.ts  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
benchmark/: run.js  run.ts  trial.js
contracts/: Cassiopeia.sol  PlonkVerifier.sol  SNARKVerifier.sol
contracts/instances/: SHA256Preimage.sol  Timelock.sol
contracts/lib/: Instance.sol  PVSSLib.sol  SNARKVerifyLib.sol
contracts/lib/ec/: alt_bn128.sol
pvss/: Cargo.toml
pvss/src/: committee.rs  dealer.rs  errors.rs  lib.rs  main.rs  public.rs  serialize.rs  structs.rs  tests.rs
test/: cassiopeia_lib.ts  test_cassiopeia.ts  test_pvss_cli.ts
zkp/: .gitignore  build_circuit.sh  cassiopeia.circom
zkp/lib/: bigint.circom  bigint_func.circom  bn254.circom  curve.circom  fp.circom
zkp/output/cassiopeia_cpp/: Makefile  cassiopeia
