[package]
name = "cassiopeia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
thiserror = "1.0.37"
ark-ec = "0.3.0"
ark-bn254 = "0.3.0"
ark-ff = "0.3.0"
num-bigint = { version = "0.4.3", features = ["rand"] }
hex = "0.4.3"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
clap = { version = "4.0.15", features = ["unstable-doc"] }
walkdir = "2.3.2"
